objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Alternate_CA_Name_s__c</fullName>
        <inlineHelpText>Legal Organization name as it appears in your CA’s CP/CPS and audit statements.</inlineHelpText>
        <label>Alternate CA Name(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CP_CPS_document_URLs__c</fullName>
        <inlineHelpText>URLs to the CA’s CP/CPS documents.</inlineHelpText>
        <label>CP/CPS document URLs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Denied_on_Date__c</fullName>
        <label>Denied on Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Describe_Company_CA_Organization__c</fullName>
        <inlineHelpText>Describe what the company does and what the CA organization does, how long the company has been in business, and how long the CA organization has been operating as a CA.</inlineHelpText>
        <label>Describe Company/CA Organization</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Geographic_Focus__c</fullName>
        <inlineHelpText>Country or geographic region where CA typically sells certs.</inlineHelpText>
        <label>Geographic Focus</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <description>Organization Type</description>
        <label>Organization Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Private Corporation</fullName>
                </value>
                <value>
                    <fullName>Public Corporation</fullName>
                </value>
                <value>
                    <fullName>Government Agency</fullName>
                </value>
                <value>
                    <fullName>Non-Profit Organization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Market_Customer_Base__c</fullName>
        <inlineHelpText>Types of customers the CA serves, vertical market segments, types of certificates issued.</inlineHelpText>
        <label>Primary Market / Customer Base</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Denial__c</fullName>
        <label>Reason for Denial</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_Terms_of_Service__c</fullName>
        <inlineHelpText>Statement that you can abide by the Salesforce Terms of Service.</inlineHelpText>
        <label>Salesforce Terms of Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I confirm that my CA can abide by the Salesforce Terms of Service</fullName>
                </value>
                <value>
                    <fullName>My CA cannot abide by the Salesforce Terms of Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsored_By__c</fullName>
        <inlineHelpText>Which root store you are sponsored by, or will be applying for inclusion to.</inlineHelpText>
        <label>Sponsored By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Mozilla</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                    <isActive>false</isActive>
                    <label>Apple</label>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                    <isActive>false</isActive>
                    <label>Cisco</label>
                </value>
                <value>
                    <fullName>Google</fullName>
                    <isActive>false</isActive>
                    <label>Google</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>